all logic plus dog image display working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,24 +25,40 @@ h2{
     padding:20px;
 }
 
-table{
-    width:100%;
-    line-height: 2em;
+#StatsTable{
+    width:96%;
+    line-height: 1.5em; 
     font-weight: bold;
+    margin-left:2%;
+    margin-right:2%;
+    margin-bottom:20px;
 }
 
+th,td{
+    border:1px solid black;
+}
+#StatsTable > th,td{
+    width:33%;
+}
+/*
 th, td{
     width:33%;
     border:1px solid black; /* while testing */
-}
+/*}
 
-.bigtext{
-    font-size:1.5em;
-    line-height:2em;
+tr{
+    line-height:4em;
 }
+*/
 
-.withborders{
+#GuessTable{
     border:1px solid black;
+    width:96%;
+    line-height: 1.5em; 
+    font-weight: bold;
+    margin-left:2%;
+    margin-right:2%;
+    margin-bottom:20px;
 }
 
 #guessedDog{
